--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -63,44 +63,44 @@ jobs:
   #      # OPTIONAL: Specify a custom install location
   #      #boost_install_dir: /home/runner/some_directory
   
-    - name: Install Thrust
-      #run: sudo apt-get install libthrust-dev
-      run: |
-        git clone --depth=1 git://github.com/thrust/thrust.git --branch 1.9.10-1
-        sudo ln -s `pwd`/thrust/thrust /usr/local/include/thrust
+#    - name: Install Thrust
+#      #run: sudo apt-get install libthrust-dev
+#      run: |
+#        git clone --depth=1 git://github.com/thrust/thrust.git --branch 1.9.10-1
+#        sudo ln -s `pwd`/thrust/thrust /usr/local/include/thrust
         
-    - name: Cache Boost
-      uses: actions/cache@v2
-      with:
-        path: '${{ runner.workspace }}/boost_*.tar.gz'
-        key: 'boost-1.72.0'
+#    - name: Cache Boost
+#      uses: actions/cache@v2
+#      with:
+#        path: '${{ runner.workspace }}/boost_*.tar.gz'
+#        key: 'boost-1.72.0'
 
-    - name: Build Boost
-      id: boost
-      # This won't re-download the archive unnecessarily:
-      uses: egor-tensin/build-boost@v1
-      with:
-        version: 1.72.0
-        libraries: date_time # in fact we don't need any compiled libs, only header libs, but when nothing is passed all libs are built
-        platform: x64
-        configuration: Release
+ #   - name: Build Boost
+ #     id: boost
+ #     # This won't re-download the archive unnecessarily:
+ #     uses: egor-tensin/build-boost@v1
+ #     with:
+ #       version: 1.72.0
+ #       libraries: date_time # in fact we don't need any compiled libs, only header libs, but when nothing is passed all libs are built
+ #       platform: x64
+ #       configuration: Release
       
     #- name: Install hdf5 (Linux)
     #  run: sudo apt-get install libhdf5-dev
     #  #if: matrix.os == 'ubuntu-latest'
 
-    - name: Configure CMake
+#    - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
+ #     run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
 
-    - name: Build
+  #  - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+   #   run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-    - name: Test
-      working-directory: ${{github.workspace}}/build
+ #   - name: Test
+  #    working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
+   #   run: ctest -C ${{env.BUILD_TYPE}}
       
