--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Download UWLCM Singularity container
       run: |
         mkdir singularity_containers
-        singularity pull singularity_containters/uwlcm_ubuntu_20_04_cuda_11_1.sif library://pdziekan/default/uwlcm_ubuntu_20_04_cuda_11_1:1.0 
+        singularity pull --dir '${{ runner.workspace }}/singularity_containters' library://pdziekan/default/uwlcm_ubuntu_20_04_cuda_11_1:1.0 
       # In truth it's cuda 11.4
         
 #    - name: Download UWLCM Singularity container
