--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,11 +34,10 @@ jobs:
         key: 'sng_ubuntu_test'
         
     - name: Download UWLCM Singularity container
+      if: ! test -f '${{ runner.workspace }}/singularity_containters/uwlcm_ubuntu_20_04_cuda_11_1' 
       run: |
-        [ -f '${{ runner.workspace }}/singularity_containters/uwlcm_ubuntu_20_04_cuda_11_1' ] &&
-        {mkdir '${{ runner.workspace }}/singularity_containters';
-        singularity pull --disable-cache --dir '${{ runner.workspace }}/singularity_containers' library://pdziekan/default/uwlcm_ubuntu_20_04_cuda_11_1:1.0;}
-        || echo "Cached Singularity container found, skipping Download"
+        mkdir '${{ runner.workspace }}/singularity_containters'
+        singularity pull --disable-cache --dir '${{ runner.workspace }}/singularity_containers' library://pdziekan/default/uwlcm_ubuntu_20_04_cuda_11_1:1.0
       # disable Singularity cache, we cache manually
       # In truth it's cuda 11.4
         
