--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,8 +31,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: '${{ runner.workspace }}/singularity_containers'
-        #path: '${{ runner.workspace }}/uwlcm_ubuntu_20_04_cuda_11_1*'
-        key: 'sng_ubuntu_test'
+        key: 'sng_ubuntu'
         
     - name: Download UWLCM Singularity container
       if: steps.cache_singularity.outputs.cache-hit != 'true'
@@ -41,6 +40,11 @@ jobs:
         singularity pull --disable-cache --dir '${{ runner.workspace }}/singularity_containers' library://pdziekan/default/uwlcm_ubuntu_20_04_cuda_11_1:1.0
       # disable Singularity cache, we cache manually
       # In truth it's cuda 11.4
+      
+    - name: Run Singularity shell
+      run: |
+        ls singularity_containers
+        singularity shell singularity_containers/uwlcm_ubuntu_20_04_cuda_11_1
         
 #    - name: Download UWLCM Singularity container
 #      run: wget https://github.com/igfuw/UWLCM/blob/0fc77ec68053936e36eea4b49f11b3dd2cb1a827/singularity/sng_ubuntu_20_04_cuda_11_1
