--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,6 +43,8 @@ jobs:
       
     - name: Run Singularity shell
       run: |
+        pwd
+        ls
         ls singularity_containers
         singularity shell singularity_containers/uwlcm_ubuntu_20_04_cuda_11_1
         
@@ -99,14 +101,14 @@ jobs:
     #  run: sudo apt-get install libhdf5-dev
     #  #if: matrix.os == 'ubuntu-latest'
 
-#    - name: Configure CMake
+    - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
- #     run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
 
-  #  - name: Build
+    - name: Build
       # Build your program with the given configuration
-   #   run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
  #   - name: Test
   #    working-directory: ${{github.workspace}}/build
