--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -45,8 +45,8 @@ jobs:
       run: |
         pwd
         ls
-        ls singularity_containers
-        singularity shell singularity_containers/uwlcm_ubuntu_20_04_cuda_11_1
+        ls '${{ runner.workspace }}/singularity_containers'
+        singularity shell '${{ runner.workspace }}/singularity_containers/uwlcm_ubuntu_20_04_cuda_11_1'
         
 #    - name: Download UWLCM Singularity container
 #      run: wget https://github.com/igfuw/UWLCM/blob/0fc77ec68053936e36eea4b49f11b3dd2cb1a827/singularity/sng_ubuntu_20_04_cuda_11_1
