--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,6 +41,22 @@ jobs:
       # disable Singularity cache, we cache manually
       # In truth it's cuda 11.4
       
+    - name: Configure CMake
+      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+   #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
+      run: singularity exec '${{ github.workspace }}/singularity_containers/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif' cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
+#
+  #  - name: Build
+      # Build your program with the given configuration
+#      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+
+ #   - name: Test
+  #    working-directory: ${{github.workspace}}/build
+      # Execute tests defined by the CMake configuration.  
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+   #   run: ctest -C ${{env.BUILD_TYPE}}
+      
  #   - name: Run Singularity shell
  #     run: singularity shell '${{ github.workspace }}/singularity_containers/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif'
         
@@ -96,20 +112,4 @@ jobs:
     #- name: Install hdf5 (Linux)
     #  run: sudo apt-get install libhdf5-dev
     #  #if: matrix.os == 'ubuntu-latest'
-
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
-      run: singularity exec '${{ github.workspace }}/singularity_containers/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif' cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
-#
-  #  - name: Build
-      # Build your program with the given configuration
-#      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-
- #   - name: Test
-  #    working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-   #   run: ctest -C ${{env.BUILD_TYPE}}
       
