--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,24 +30,29 @@ jobs:
       id: cache_singularity
       uses: actions/cache@v2
       with:
-        path: '${{ github.workspace }}/singularity_containers'
+        path: '${{ github.workspace }}/singularity_images'
         key: 'sng_ubuntu'
         
     - name: Download UWLCM Singularity container
       if: steps.cache_singularity.outputs.cache-hit != 'true'
       run: |
-        mkdir '${{ github.workspace }}/singularity_containers'
-        singularity pull --disable-cache --dir '${{ github.workspace }}/singularity_containers' library://pdziekan/default/uwlcm_ubuntu_20_04_cuda_11_1:1.0
-        singularity exec '${{ github.workspace }}/singularity_containers/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif' nvidia-smi
-        nvidia-smi
+        mkdir '${{ github.workspace }}/singularity_images'
+        singularity pull --disable-cache --dir '${{ github.workspace }}/singularity_images' library://pdziekan/default/uwlcm_ubuntu_20_04_cuda_11_1:1.0
       # disable Singularity cache, we cache manually
       # In truth it's cuda 11.4
+
+    - name: Set friendly Singularity image name
+      run: |
+        set SI='${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif'
+        echo $SI
+        singularity exec '$SI' nvidia-smi
+        nvidia-smi
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
    #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
-      run: singularity exec '${{ github.workspace }}/singularity_containers/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif' cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
+      run: singularity exec '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif' cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
 #
   #  - name: Build
       # Build your program with the given configuration
@@ -60,7 +65,7 @@ jobs:
    #   run: ctest -C ${{env.BUILD_TYPE}}
       
  #   - name: Run Singularity shell
- #     run: singularity shell '${{ github.workspace }}/singularity_containers/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif'
+ #     run: singularity shell '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif'
         
 #    - name: Download UWLCM Singularity container
 #      run: wget https://github.com/igfuw/UWLCM/blob/0fc77ec68053936e36eea4b49f11b3dd2cb1a827/singularity/sng_ubuntu_20_04_cuda_11_1
