--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,6 +20,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Install Nvidia driver
+      run: sudo apt install nvidia-driver-470
     
     - name: Install Singularity
       uses: eWaterCycle/setup-singularity@v6
