--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -45,21 +45,17 @@ jobs:
       # In truth it's cuda 11.4
 
     - name: Set friendly Singularity image name
-      run: |
-        SI='${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif'
-        echo $SI
-        singularity exec $SI nvidia-smi
-        nvidia-smi
+      run: SI='${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif'
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
    #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
-      run: singularity exec '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif' cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
+      run: singularity exec $SI cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 #
-  #  - name: Build
+    - name: Build
       # Build your program with the given configuration
-#      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: singularity exec $SI cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
  #   - name: Test
   #    working-directory: ${{github.workspace}}/build
