--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -51,11 +51,11 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
    #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
-      run: singularity exec $SI cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: singularity exec $SI 'cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}'
 #
     - name: Build
       # Build your program with the given configuration
-      run: singularity exec $SI cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: singularity exec $SI 'cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}'
 
  #   - name: Test
   #    working-directory: ${{github.workspace}}/build
