--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,8 +24,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install Nvidia driver
-      run: sudo apt install --no-install-recommends nvidia-driver-470
+#    - name: Install Nvidia driver
+#      run: sudo apt install --no-install-recommends nvidia-driver-470
     
     - name: Install Singularity
       uses: eWaterCycle/setup-singularity@v6
@@ -46,25 +46,33 @@ jobs:
         singularity pull --disable-cache --dir '${{ github.workspace }}/singularity_images' library://pdziekan/default/uwlcm:ubuntu_20_04_cuda_11_4
       # disable Singularity cache, we cache manually
 
-#    - name: Set friendly Singularity image name
+    - name: Set friendly Singularity image name
+      id: si
+      output:
+        name: '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_4.sif'
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
    #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
       run: |
-        echo $env.SI
-        singularity exec $env.SI 'cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}'
+        echo ${{ si.name }}
+#        singularity exec ${{si.name}} 'cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}'
 #
-    - name: Build
+#    - name: Build
       # Build your program with the given configuration
-      run: singularity exec $env.SI 'cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}'
+#      run: singularity exec $env.SI 'cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}'
 
- #   - name: Test
-  #    working-directory: ${{github.workspace}}/build
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Test
+      working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-   #   run: ctest -C ${{env.BUILD_TYPE}}
+      run: ctest -C ${{env.BUILD_TYPE}}
       
  #   - name: Run Singularity shell
  #     run: singularity shell '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif'
