--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,7 +11,7 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  # 'build' is just a job name
+  # first job, build the library
   build:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
@@ -24,8 +24,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-#    - name: Install Nvidia driver
-#      run: sudo apt install --no-install-recommends nvidia-driver-470
+    - name: Install Nvidia driver
+      run: sudo apt install --no-install-recommends nvidia-driver-470
     
     - name: Install Singularity
       uses: eWaterCycle/setup-singularity@v6
@@ -57,7 +57,7 @@ jobs:
    #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
       run: singularity exec $SI 'cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}'
 #
-    - name: Build
+    - name: Build libcloudph++
       # Build your program with the given configuration
       run: singularity exec $SI 'cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}'
 
@@ -74,7 +74,7 @@ jobs:
       with:
         SI: '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_4.sif'
 
-    - name: unit_test
+    - name: Run unit tests
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
