--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -55,15 +55,11 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
    #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
-      run: |
-        pwd
-        singularity exec $SI 'cmake'
-        singularity exec $SI cmake
-        singularity exec $SI 'cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}'
+      run: singularity exec $SI cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 #
     - name: Build libcloudph++
       # Build your program with the given configuration
-      run: singularity exec $SI 'cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}'
+      run: singularity exec $SI cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
 
   # job test
@@ -82,7 +78,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: singularity exec $SI 'ctest -C ${{env.BUILD_TYPE}}'
+      run: singularity exec $SI ctest -C ${{env.BUILD_TYPE}}
       
 
 
