--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -28,11 +28,16 @@ jobs:
       run: sudo apt install --no-install-recommends nvidia-driver-470
     
     - name: Install Singularity
-#      when installed from this action, .SIF is always converted to sandbox (could be related to: https://githubmemory.com/repo/hpcng/singularity/issues/6065)
+      #when installed from this action, .SIF is always converted to sandbox (could be related to: https://githubmemory.com/repo/hpcng/singularity/issues/6065)
 #      uses: eWaterCycle/setup-singularity@v6
 #      with:
 #        singularity-version: 3.6.4
-      run: sudo apt-get install -y singularity-container
+      #following https://sylabs.io/guides/3.0/user-guide/installation.html
+      run: |
+        wget -O- http://neuro.debian.net/lists/focal.de-fzj.libre | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list
+        sudo apt-key adv --recv-keys --keyserver hkps://keyserver.ubuntu.com 0xA5D32F012649A5A9
+        sudo apt-get update
+        sudo apt-get install -y singularity-container
             
     - name: Cache UWLCM Singularity image
       id: cache_singularity
