--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,10 +214,13 @@ if (CMAKE_CUDA_COMPILER)
         set (code "20")
         message(STATUS "CUDA capability check failed, assuming a default of ${code}")
       endif()
+      message(STATUS "CUDA capability check failed, assuming a default of code: ${code}")
       set(arch ${code})
+      message(STATUS "CUDA capability check failed, assuming a default of arch: ${arch}")
       if (arch EQUAL "21") # see https://devtalk.nvidia.com/default/topic/606195/-solved-nvcc-fatal-unsupported-gpu-architecture-compute_21-/
         set(arch "20")
       endif()
+      message(STATUS "CUDA capability check failed, assuming a default of arch: ${arch}")
       set(GPU_CODE_OPTIONS ${GPU_CODE_OPTIONS}sm_${arch},)
     endforeach(code)
     target_compile_options(cloudphxx_lgrngn PRIVATE  $<$<COMPILE_LANGUAGE:CUDA>:${GPU_CODE_OPTIONS}>)
