--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -66,7 +66,7 @@ jobs:
 #
     - name: Build libcloudph++
       # Build your program with the given configuration
-      run: singularity exec $SI VERBOSE=1 cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: VERBOSE=1 singularity exec $SI cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
 
   # job test
