--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -18,13 +18,18 @@ jobs:
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-20.04
-    env: 
-      SI: '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_4.sif'
+
+    strategy:
+      matrix:
+        include:
+        - cuda: "True"
+        - cuda: "False"
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Install Nvidia driver
+      if: matrix.cuda == "true"
       run: sudo apt install --no-install-recommends nvidia-driver-470
     
     - name: Install Singularity
@@ -47,7 +52,7 @@ jobs:
         key: 'sng_ubuntu_20_04_cuda_11_4'
         
     - name: Download UWLCM Singularity image
-      if: steps.cache_singularity.outputs.cache-hit != 'true'
+      if: steps.cache_singularity.outputs.cache-hit != 'True'
       run: |
         mkdir '${{ github.workspace }}/singularity_images'
         singularity pull --disable-cache --dir '${{ github.workspace }}/singularity_images' library://pdziekan/default/uwlcm:ubuntu_20_04_cuda_11_4
@@ -61,8 +66,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-   #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.boost.outputs.root }}
-      run: singularity exec $SI cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DLIBCLOUDPHXX_FORCE_MULTI_CUDA=True
+      run: singularity exec $SI cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DLIBCLOUDPHXX_FORCE_MULTI_CUDA=True -DLIBCLOUDPHXX_DISABLE_CUDA=${{matrix.cuda}}
 #
     - name: Build libcloudph++
       # Build your program with the given configuration
