GA: builds with and without cuda

--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -22,14 +22,14 @@ jobs:
     strategy:
       matrix:
         include:
-        - cuda: "True"
-        - cuda: "False"
+        - cuda: True
+        - cuda: False
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Install Nvidia driver
-      if: matrix.cuda = 'True'
+      if: matrix.cuda == 'True'
       run: sudo apt install --no-install-recommends nvidia-driver-470
     
     - name: Install Singularity
