GA: builds with and without cuda

--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -32,7 +32,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install Nvidia driver
-      if: matrix.cuda == "True"
+      if: matrix.cuda == 'True'
       run: sudo apt install --no-install-recommends nvidia-driver-470
     
     - name: Install Singularity
