--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -6,9 +6,9 @@ on:
   pull_request:
     branches: [ master ]
 
-env:
+#env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
+#  BUILD_TYPE: Release
 
 jobs:
   # first job, build the library
@@ -22,6 +22,7 @@ jobs:
     strategy:
       matrix:
         name: ["CUDA", "no CUDA"]
+        build_type: ["Debug", "Release"]
         include:
         - name: "CUDA"
           disable-cuda: false
@@ -30,10 +31,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
-    - run: echo ${{matrix.disable-cuda}}
-
-    - run: echo ${{!matrix.disable-cuda}}
 
     - name: Install Nvidia driver
       if: ${{!matrix.disable-cuda}}
@@ -73,11 +70,11 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: singularity exec $SI cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DLIBCLOUDPHXX_FORCE_MULTI_CUDA=True -DLIBCLOUDPHXX_DISABLE_CUDA=${{matrix.disable-cuda}}
+      run: singularity exec $SI cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DLIBCLOUDPHXX_FORCE_MULTI_CUDA=True -DLIBCLOUDPHXX_DISABLE_CUDA=${{matrix.disable-cuda}}
 #
     - name: Build libcloudph++
       # Build your program with the given configuration
-      run: VERBOSE=1 singularity exec $SI cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -j4
+      run: VERBOSE=1 singularity exec $SI cmake --build ${{github.workspace}}/build --config ${{matrix.build_type}} -j4
 
   # job test
   test:
@@ -95,7 +92,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: singularity exec $SI ctest -C ${{env.BUILD_TYPE}}
+      run: singularity exec $SI ctest -C ${{matrix.build_type}}
       
 
 
